objects/FieloPRM_EventCatalog__c.object
<CustomObject>
    <fields>
        <fullName>EventCatalogId__c</fullName>
        <displayFormat>EC-{0000}</displayFormat>
        <label>EventCatalogId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>F_PRM_ContentFeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content feed</label>
        <referenceTo>FieloEE__News__c</referenceTo>
        <relationshipLabel>Events Catalog</relationshipLabel>
        <relationshipName>Events_Catalog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country used to filter records when assigning events to partners.</description>
        <inlineHelpText>Country used to filter records when assigning events to partners.</inlineHelpText>
        <label>Country</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>Events Catalog</relationshipLabel>
        <relationshipName>Events_Catalog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_Points__c</fullName>
        <description>Non-Currency points that will get mapped with the actual event Points field</description>
        <inlineHelpText>Non-Currency points that will get mapped with the actual event Points field</inlineHelpText>
        <label>Experience Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_Type__c</fullName>
        <description>Event Type that will get mapped with the actual event Type field</description>
        <inlineHelpText>Event Type that will get mapped with the actual event Type field</inlineHelpText>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_ValueText__c</fullName>
        <description>Text event Value that will get mapped with the actual event Value Text field</description>
        <inlineHelpText>Text event Value that will get mapped with the actual event Value Text field</inlineHelpText>
        <label>Value Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_Value__c</fullName>
        <description>Numeric event Value that will get mapped with the actual event Value field</description>
        <inlineHelpText>Numeric event Value that will get mapped with the actual event Value field</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If active, this record will be included in the search result list when assigning events to partners</description>
        <inlineHelpText>If active, this record will be included in the search result list when assigning events to partners</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingDescription__c</fullName>
        <description>Small description of last publication</description>
        <inlineHelpText>Small description of last publication</inlineHelpText>
        <label>PublishingDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublishingGoldenId__c</fullName>
        <description>Track the source Id</description>
        <inlineHelpText>Track the source Id</inlineHelpText>
        <label>PublishingGoldenId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingIsUpdated__c</fullName>
        <description>Identify if the record has been updated</description>
        <formula>IF( OR(LastModifiedDate  &gt; PublishingTimestamp__c,ISBLANK(PublishingTimestamp__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify if the record has been updated</inlineHelpText>
        <label>PublishingIsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingOdasevaId__c</fullName>
        <externalId>true</externalId>
        <label>PublishingOdasevaId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPublisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track who was the last publisher</description>
        <inlineHelpText>Track who was the last publisher</inlineHelpText>
        <label>PublishingPublisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PublisherFieloPRMEventCatalogc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingStatusImage__c</fullName>
        <description>Identify at first sight that the record is set for publication</description>
        <formula>CASE(TEXT(PublishingStatus__c),&quot;Ready for Publication&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Ready for Publication&quot;),&quot;Awaiting Publication&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Awaiting Publication&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify at first sight that the record is set for publication</inlineHelpText>
        <label>PublishingStatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingStatus__c</fullName>
        <label>PublishingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Publication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishingTimestamp__c</fullName>
        <description>Date and time of the last publication</description>
        <inlineHelpText>Date and time of the last publication</inlineHelpText>
        <label>PublishingTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ProgramStatusActivityFeed__c</fullName>
        <formula>IF( ISBLANK(F_PRM_ContentFeed__c) , HYPERLINK(&apos;/aAR/e?retURL=/&apos;+Id+&apos;&amp;RecordType=&apos;+ $Label.CLJun18PRMStatusRecordTypeId, &apos;Create&apos;), &apos;Description Added&apos;)</formula>
        <label>Program Status Activity Feed</label>
        <type>Text</type>
    </fields>
    <label>Event Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>F_PRM_isActive__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>F_PRM_ValueText__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CO_Events</fullName>
        <columns>NAME</columns>
        <columns>F_PRM_ValueText__c</columns>
        <columns>F_PRM_isActive__c</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>F_PRM_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_PRM_Country__c</field>
            <operation>equals</operation>
            <value>Sweden</value>
        </filters>
        <label>SE - Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>ISMADeployment1CoreTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Event_License_MV_LV</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>F_PRM_ValueText__c</columns>
        <columns>F_PRM_isActive__c</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>F_PRM_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Alli</value>
        </filters>
        <filters>
            <field>F_PRM_Description__c</field>
            <operation>contains</operation>
            <value>alli</value>
        </filters>
        <filters>
            <field>F_PRM_ValueText__c</field>
            <operation>contains</operation>
            <value>alli</value>
        </filters>
        <label>Alliance Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>ISMADeployment1CoreTeam</group>
            <group>PRM_LV_MV</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Global_EcoXpert_Event_Catalogs</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>F_PRM_ValueText__c</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>F_PRM_Value__c</columns>
        <columns>F_PRM_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>EcoXpert</value>
        </filters>
        <label>Global EcoXpert Event Catalogs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Lv_mv_Events</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>F_PRM_isActive__c</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>F_PRM_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>LV,MV,Licensee</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>OKKEN,BLOKSET,SYSTEM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>NEX,SM6,MCSET,MOTORPACT,BIOSCO,RM6,PREMSET,PIX</value>
        </filters>
        <label>LV&amp;MV Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>ISMADeployment1CoreTeam</group>
            <group>PRM_LV_MV</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Event Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events Catalog</pluralLabel>
    <recordTypes>
        <fullName>Automatic</fullName>
        <active>true</active>
        <label>Automatic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual</fullName>
        <active>true</active>
        <label>Manual</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>